-> Added Footer -> Fixed overlapping <body> graident background in 3 pages -> Fixed table responsiveness in Transaction page

--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -4,7 +4,7 @@
             margin: 0;
             padding: 0;
             font-family: 'Poppins', sans-serif;
-            color: #1a1a1a;
+            /* color: #1a1a1a; */
             background: linear-gradient(to bottom, #1f8a4d, #4ecb8f, #b9f6ce);
             background-repeat: no-repeat;
             background-attachment: fixed;
